--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,15 +10,71 @@
     <link rel="stylesheet" href="./css/stylesheet.css">
   </head>
   <body>
-    <header>Welcome Clay's Page.</header>
+    <header>Clay Hulsebus</header>
     <nav>
       <a href="./resume.html"> Resume </a>
     </nav>
     <main>
-        <h1>Clay Hulsebus</h1>
-        <p>I am a Junior at the University of Iowa Tippie College of Business. I am a Business Analytics and Information Systems major that has aspirations to be a Business Analyst or Business Consultant
-  </p>
+        <h1> About Clay Hulsebus</h1>
+        <p>
+            I am a Junior at the University of Iowa Tippie College of Business. I am a Business Analytics and Information Systems major that has aspirations to be a Business Analyst or Business Consultant
         </p>
+        <h2>Preferred Locations After Graduation:</h2>
+        <ol>
+          <li>Des Moines, IA</li>
+          <li>Iowa City, IA</li>
+          <li>Phoenix, AZ</li>
+        </ol>
+  
+        <p>
+          I would obviously prefer to stay near family, and places like Iowa City and Des Moines
+          would allow for that. I love the state of Iowa and would love to always be near home, 
+          and the Hawkeyes. The reason I am considering the Phoenix metropolitain area is that
+          my entire immediate family wants to end up there at some point. We go there every year 
+          for spring break and we all love it. I may just get forced into moving there so it will
+          always be a possibility.
+        </p>
+  
+        <table>
+          <thead>
+            <td>PlayerName</td>
+            <td>Status</td>
+            <td>Position</td>
+            <td>Good?</td>
+          </thead>
+  
+          <tr>
+            <td>CJ Beathard</td>
+            <td>Junior</td>
+            <td>Quarterback</td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>Marshall Koehn</td>
+            <td>Senior</td>
+            <td>Kicker</td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>Jerminic Smith</td>
+            <td>Freshman</td>
+            <td>Wide Reciever</td>
+            <td>Yes,</td>
+          </tr>
+          <tr>
+            <td>Melvin Spears</td>
+            <td>Senior</td>
+            <td>Defensive End</td>
+            <td>No</td>
+          </tr>
+        </table>
+        <p>&nbsp;</p>
+        <img
+        src="C:\Users\hulse\OneDrive\School\CJ Beathard.jpg"
+        alt="CJ Beathard scoring a 4th quarter touchdown against Minnesota using the classic Chuck Long play from 1985"
+      />
+      <p>&nbsp;</p>
+
     </main>
     <footer>
         &copy; Clay Hulsebus, 2023
