--- a/index.html
+++ b/index.html
@@ -69,9 +69,17 @@
           </tr>
         </table>
         <p>&nbsp;</p>
-        <img
-        src="C:\Users\hulse\OneDrive\School\CJ Beathard.jpg"
-        alt="CJ Beathard scoring a 4th quarter touchdown against Minnesota using the classic Chuck Long play from 1985"
+       <img
+        src="C:\Users\hulse\OneDrive\Pictures\Clay Hulsebus - Yearbook.jpg"
+        width="200" 
+        height="300" 
+        alt="My senior picture from 2019"
+      />
+      <img
+        src="C:\Users\hulse\OneDrive\Pictures\2020 New Year Card3 (2).jpg"
+        width="300" 
+        height="300" 
+        alt="Picture from my Graduation in 2020"
       />
       <p>&nbsp;</p>
 
