--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clay Hulsebus</title>
-    <link rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <header>Clay Hulsebus</header>
@@ -37,10 +35,10 @@
   
         <table>
           <thead>
-            <td>PlayerName</td>
-            <td>Status</td>
-            <td>Position</td>
-            <td>Good?</td>
+            <td> PlayerName </td>
+            <td> Status </td>
+            <td> Position </td>
+            <td> Good? </td>
           </thead>
   
           <tr>
@@ -59,7 +57,7 @@
             <td>Jerminic Smith</td>
             <td>Freshman</td>
             <td>Wide Reciever</td>
-            <td>Yes,</td>
+            <td>Yes</td>
           </tr>
           <tr>
             <td>Melvin Spears</td>
@@ -70,13 +68,13 @@
         </table>
         <p>&nbsp;</p>
        <img
-        src="C:\Users\hulse\OneDrive\Pictures\Clay Hulsebus - Yearbook.jpg"
+        src="ClayHulsebus-Yearbook.jpg"
         width="200" 
         height="300" 
         alt="My senior picture from 2019"
-      />
+        />
       <img
-        src="C:\Users\hulse\OneDrive\Pictures\2020 New Year Card3 (2).jpg"
+        src="2020-New-Year-Card-Clay.jpg"
         width="300" 
         height="300" 
         alt="Picture from my Graduation in 2020"
