--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WSELW0LHQH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSELW0LHQH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-WSELW0LHQH');
-</script>
+      gtag('config', 'G-WSELW0LHQH');
+    </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,26 +22,22 @@
       <a href="./resume.html"> Resume </a>
     </nav>
     <main>
-        <h1> About Clay Hulsebus</h1>
-        <p>
-            I am a Junior at the University of Iowa Tippie College of Business. I am a Business Analytics and Information Systems major that has aspirations to be a Business Analyst or Business Consultant
-        </p>
-        <h2>Preferred Locations After Graduation:</h2>
-        <ol>
-          <li>Des Moines, IA</li>
-          <li>Iowa City, IA</li>
-          <li>Phoenix, AZ</li>
-        </ol>
-  
-        <p>
-          I would obviously prefer to stay near family, and places like Iowa City and Des Moines
-          would allow for that. I love the state of Iowa and would love to always be near home, 
-          and the Hawkeyes. The reason I am considering the Phoenix metropolitain area is that
-          my entire immediate family wants to end up there at some point. We go there every year 
-          for spring break and we all love it. I may just get forced into moving there so it will
-          always be a possibility.
-        </p>
-  
+      <h1> About Clay Hulsebus</h1>
+      <p>
+        I am a Junior at the University of Iowa Tippie College of Business. I am a Business Analytics and Information Systems major that has aspirations to be a Business Analyst or Business Consultant
+      </p>
+      <h2>Preferred Locations After Graduation:</h2>
+      <ol>
+        <li>Des Moines, IA</li>
+        <li>Iowa City, IA</li>
+        <li>Phoenix, AZ</li>
+      </ol>
+
+      <p>
+        I would obviously prefer to stay near family, and places like Iowa City and Des Moines would allow for that. I love the state of Iowa and would love to always be near home, and the Hawkeyes. The reason I am considering the Phoenix metropolitan area is that my entire immediate family wants to end up there at some point. We go there every year for spring break and we all love it. I may just get forced into moving there so it will always be a possibility.
+      </p>
+
+      <table>
         <thead>
           <tr>
             <td>PlayerName</td>
@@ -50,8 +46,8 @@
             <td>Good?</td>
           </tr>
         </thead>
-        
-  
+
+        <tbody>
           <tr>
             <td>CJ Beathard</td>
             <td>Junior</td>
@@ -67,7 +63,7 @@
           <tr>
             <td>Jerminic Smith</td>
             <td>Freshman</td>
-            <td>Wide Reciever</td>
+            <td>Wide Receiver</td>
             <td>Yes</td>
           </tr>
           <tr>
@@ -76,25 +72,17 @@
             <td>Defensive End</td>
             <td>No</td>
           </tr>
-        </table>
-        <p>&nbsp;</p>
-       <img
-        src="ClayHulsebus-Yearbook.jpg"
-        width="200" 
-        height="300" 
-        alt="My senior picture from 2019"
-        />
-      <img
-        src="2020-New-Year-Card-Clay.jpg"
-        width="300" 
-        height="300" 
-        alt="Picture from my Graduation in 2020"
-      />
+        </tbody>
+      </table>
+
       <p>&nbsp;</p>
 
-    </main>
-    <footer>
-        &copy; Clay Hulsebus, 2023
-    </footer>
-  </body>
-</html>
+      <img src="ClayHulsebus-Yearbook.jpg" width="200" height="300" alt="My senior picture from 2019" />
+      <img src="2020-New-Year-Card-Clay.jpg" width="300" height="300" alt="Picture from my Graduation in 2020" />
+       <p>&nbsp;</p>
+       </main> 
+       <footer> 
+        &copy; Clay Hulsebus, 2023 
+      </footer> 
+  </body> 
+    </html>
