--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="ClayHulsebus">
+    <meta property="og:description" content="Portfolio showcasing my coursework and resume">
+    <meta property="og:image" content="https://ClayHulsebus-Yearbook">
+    <meta property="og:url" content="https://clayhulsebus.com/">  
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
@@ -20,7 +25,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="./android-chrome-512x512.png">   
     <title>Clay Hulsebus</title>
     <div class="cookie-popup">
-      <p>This website uses cookies to enhance user experience. By using this website, you consent to the use of cookies in accordance with our <a href="cookie-policy.html">Cookie Policy</a>.</p>
+      <p>This website uses cookies to enhance user experience. By using this website, you consent to the use of cookies in accordance with our <a href="cookiepolicy.html">Cookie Policy</a>.</p>
       <button class="cookie-accept">Accept</button>
   </div>
     <link rel="stylesheet" href="stylesheet.css">
@@ -45,6 +50,10 @@
     </nav>
     <main>
       <h1> About Clay Hulsebus</h1>
+      <p>Check out my social media accounts:</p>
+        <a href="https://github.com/ClayHulsebus"><img src="./images/GitHub_Logo.png" alt="Github" width="50" height="50"></a><br>
+        <a href="https://www.linkedin.com/in/clay-hulsebus-b7b875221/"><img src="./images/linkedin_pic.png" alt="LinkedIn" width="50" height="50"></a><br>
+        <p>Email: clay-hulsebus@uiowa.edu</p>
       <p>
         I am a Junior at the University of Iowa Tippie College of Business. I am a Business Analytics and Information Systems major that has aspirations to be a Business Analyst or Business Consultant
       </p>
@@ -96,7 +105,7 @@
        <p>&nbsp;</p>
        </main> 
        <footer> 
-        &copy; Clay Hulsebus, 2023
+        &copy; Clay Hulsebus, 2023. All Rights Reserved. <a href="privacy.html">Privacy Policy</a></p><br>
         <a href="termsandconditions.html">Terms and Conditions</a><br>
         <a href="cookiepolicy.html">Cookie Policy</a> 
       </footer> 
