--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
     <meta property="og:description" content="Portfolio showcasing my coursework and resume">
     <meta property="og:image" content="https://ClayHulsebus-Yearbook">
     <meta property="og:url" content="https://clayhulsebus.com/">  
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="./android-chrome-192x192.png"> 
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon.jpg"> 
     <link rel="icon" type="image/png" sizes="512x512" href="./android-chrome-512x512.png">   
     <title>Clay Hulsebus</title>
     <div class="cookie-popup">
