--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+   <!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
@@ -16,17 +16,17 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="ClayHulsebus">
     <meta property="og:description" content="Portfolio showcasing my coursework and resume">
-    <meta property="og:image" content="https://ClayHulsebus-Yearbook">
+    <meta property="og:image" content="https://ClayHulsebus-Yearbook.jpg">
     <meta property="og:url" content="https://clayhulsebus.com/">  
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon.jpg"> 
     <title>Clay Hulsebus</title>
-    <div class="cookie-popup">
-      <p>This website uses cookies to enhance user experience. By using this website, you consent to the use of cookies in accordance with our <a href="cookiepolicy.html">Cookie Policy</a>.</p>
-      <button class="cookie-accept">Accept</button>
-  </div>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body class="wrapper">
+    <div class="cookie-popup">
+      <p>This website uses cookies to enhance user experience. By using this website, you consent to the use of cookies in accordance with our <a href="cookiepolicy.html">Cookie Policy</a>.</p>
+      <button class="cookie-accept">Accept</button>
+    </div>
     <script>
       var cookiePopup = document.querySelector('.cookie-popup');
       var cookieAccept = document.querySelector('.cookie-accept');
@@ -39,7 +39,7 @@
       if (document.cookie.indexOf('cookieAccepted=true') > -1) {
       cookiePopup.style.display = 'none';
       }
-      </script>
+    </script>
     <header>Clay Hulsebus</header>
     <nav>
       <a href="./resume.html"> Resume </a>
@@ -61,7 +61,7 @@
       </ol>
 
       <p>
-        I would obviously prefer to stay near family, and places like Iowa City and Des Moines would allow for that. I love the state of Iowa and would love to always be near home, and the Hawkeyes. The reason I am considering the Phoenix metropolitan area is that my entire immediate family wants to end up there at some point. We go there every year for spring break and we all love it. I may just get forced into moving there so it will always be a possibility.
+        I would obviouslyprefer to stay near family, and places like Iowa City and Des Moines would allow for that. I love the state of Iowa and would love to always be near home, and the Hawkeyes. The reason I am considering the Phoenix metropolitan area is that my entire immediate family wants to end up there at some point. We go there every year for spring break and we all love it. I may just get forced into moving there so it will always be a possibility.
       </p>
 
     <table>
@@ -90,7 +90,7 @@
             <td>Operations Optimization</td>
             <td>Renato De Matta</td>
           </tr>
-          </tr>
+        </tr>
         </tbody>
       </table>
 
@@ -101,9 +101,12 @@
        <p>&nbsp;</p>
        </main> 
        <footer> 
-        &copy; Clay Hulsebus, 2023. All Rights Reserved. <a href="privacy.html">Privacy Policy</a></p><br>
+        &copy; Clay Hulsebus, 2023. All Rights Reserved. <a href="privacy.html">Privacy Policy</a><br>
         <a href="termsandconditions.html">Terms and Conditions</a><br>
         <a href="cookiepolicy.html">Cookie Policy</a> 
       </footer> 
   </body> 
     </html>
+
+
+ 
