--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-   <!DOCTYPE html>
+<!DOCTYPE html>↩
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
@@ -61,7 +61,7 @@
       </ol>
 
       <p>
-        I would obviouslyprefer to stay near family, and places like Iowa City and Des Moines would allow for that. I love the state of Iowa and would love to always be near home, and the Hawkeyes. The reason I am considering the Phoenix metropolitan area is that my entire immediate family wants to end up there at some point. We go there every year for spring break and we all love it. I may just get forced into moving there so it will always be a possibility.
+        I would obviously prefer to stay near family, and places like Iowa City and Des Moines would allow for that. I love the state of Iowa and would love to always be near home, and the Hawkeyes. The reason I am considering the Phoenix metropolitan area is that my entire immediate family wants to end up there at some point. We go there every year for spring break and we all love it. I may just get forced into moving there so it will always be a possibility.
       </p>
 
     <table>
@@ -91,8 +91,8 @@
             <td>Renato De Matta</td>
           </tr>
         </tr>
-        </tbody>
-      </table>
+      </tbody>
+    </table>
 
       <p>&nbsp;</p>
 
@@ -107,6 +107,6 @@
       </footer> 
   </body> 
     </html>
-
+    
 
  
