--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Terms and Conditions</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css" >
+	<a href="index.html"><img src="./images/GitHub_Logo.png" alt="Home" width="50" height="50"></a><br>
 </head>
 <body>
 	<h1>Terms and Conditions</h1>
