--- a/cookiepolicy.html
+++ b/cookiepolicy.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Cookie Policy</title>
-    <link rel="stylesheet" type="css" href="stylesheet.css" >
-	<a href="index.html"><img src="./images/GitHub_Logo.png" alt="Home" width="50" height="50"></a><br>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">   
+
+
 </head>
 <body>
+	<a href="index.html"><img src="./images/GitHub_Logo.png" alt="Home" width="50" height="50"></a><br>
 	<h1>Cookie Policy</h1>
 	<p>This website uses cookies to enhance user experience. By using this website, you consent to the use of cookies in accordance with this policy.</p>
 	<h2>What are cookies?</h2>
