--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -51,7 +51,7 @@
 
 	<h2>Governing Law</h2>
 
-	<p>These terms and conditions will be governed by and construed in accordance with the laws of [insert your jurisdiction], and any disputes relating to these terms and conditions will be subject to the exclusive jurisdiction of the courts of [insert your jurisdiction].</p>
+	<p>These terms and conditions will be governed by and construed in accordance with the laws of The United States of America, and any disputes relating to these terms and conditions will be subject to the exclusive jurisdiction of the courts of [insert your jurisdiction].</p>
 
 	<h2>Contact Us</h2>
 
