--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <main>
       <h1> About Clay Hulsebus</h1>
       <p>Check out my social media accounts:</p>
-        <a href="https://github.com/ClayHulsebus"><img src="./images/GitHub_Logo.png" alt="Github" width="50" height="50"></a><br>
-        <a href="https://www.linkedin.com/in/clay-hulsebus-b7b875221/"><img src="./images/linkedin_pic.png" alt="LinkedIn" width="50" height="50"></a><br>
+        <a href="https://github.com/ClayHulsebus"><img src="github-logo.png" alt="Github" width="50" height="50"></a><br>
+        <a href="https://www.linkedin.com/in/clay-hulsebus-b7b875221/"><img src="LinkedIn-logo.png" alt="LinkedIn" width="50" height="50"></a><br>
         <p>Email: clay-hulsebus@uiowa.edu</p>
       <p>
         I am a Junior at the University of Iowa Tippie College of Business. I am a Business Analytics and Information Systems major that has aspirations to be a Business Analyst or Business Consultant
